Add profile and favorites API
